various fixes and renames
- Rename minecraft_local_server_file to local_minecraft_server_file
- Fix eula accept problem when reinstalling
- Add example of using local_minecraft_server_file
- Do not use object storage
- Rename vagrant and vagrant.yml to be more descriptive
- rename git repo vars

--- a/env_vars/base.yml
+++ b/env_vars/base.yml
@@ -1,6 +1,6 @@
 ---
 
-git_repo: https://github.com/uncaught-exceptions/minedash.git
+minedash_git_repo: https://github.com/uncaught-exceptions/minedash.git
 
 # Git settings.
 setup_git_repo: yes
