--- a/roles/web/tasks/setup_git_repo.yml
+++ b/roles/web/tasks/setup_git_repo.yml
@@ -1,8 +1,8 @@
 ---
 
 - name: Setup the Git repo
-  git: repo={{ git_repo }}
-       version={{ git_branch }}
+  git: repo={{ minedash_git_repo }}
+       version={{ minedash_git_branch }}
        dest={{ project_path }}
        accept_hostkey=yes
   tags: git
