--- a/roles/minecraft/tasks/main.yml
+++ b/roles/minecraft/tasks/main.yml
@@ -15,6 +15,9 @@
 - include: config_server.yml
   tags: minecraft
 
+- include: config_mods.yml
+  tags: minecraft
+
 - include: config_supervisor.yml
   tags: minecraft
 
